--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: hsl(0, 0%, 96%);
 
@@ -45,4 +45,49 @@ button:hover{
 #result{
     font-size: 1.75em;
     font-weight: bold;
+} */
+
+
+/* .box{
+    border: 3px solid;
+    width: 100%;
+    height: 125px;
+
+} */
+
+/* #fruits{
+border: 3px solid;
+font: 2rem;
+} */
+
+/* 
+.myButton{
+    font-size: 4rem;
+    margin: 10px;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    background-color:  hsl(205, 100%, 60%);
+    color: white;
+} */
+
+#Mybtn{
+font-size: 4rem;
+margin: 10px;
+border: none;
+border-radius: 10px;
+padding: 10px 15px;
+}
+.enabled{
+    background-color: hsl(204, 100%, 25%);
+    color: white;
+}
+.hover{
+box-shadow: 0 0  10px hsla(0, 0%, 0%, 0.208);
+font-weight: bold;
+}
+
+.disable{
+    background-color: hsl(0, 0%, 60%);
+   color: hsl(0, 0%, 80%);
 }
